tests/rustdoc-ui/intra-doc/field-ice.stderr
error: incompatible link kind for `Foo::bar`
  --> $DIR/field-ice.rs:5:7
   |
LL | /// [`Foo::bar()`]
   |       ^^^^^^^^^^ this link resolved to a field, which is not a function
   |
note: the lint level is defined here
  --> $DIR/field-ice.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to link to the field, remove the disambiguator
   |
LL | /// [`Foo::bar`]
   |       ~~~~~~~~

error: aborting due to previous error

